--- a/test.html
+++ b/test.html
@@ -24,8 +24,8 @@
 </head>
 <body bgcolor="#E6E6FA" >
 	<div align="center">
-	<div><img src="img/2.jpg"alt="selfie"width="500"height="900"></div>
-	<div><img src="img/4.jpg"alt="selfie"width="100"height="100">
+	<div><img src="2.jpg"alt="selfie"width="500"height="900"></div>
+	<div><img src="4.jpg"alt="selfie"width="100"height="100">
 			梦想是做一条咸鱼</div>
     <div class="introduction">
         <ul>
@@ -33,7 +33,7 @@
             <br>计科201班</br>
             <br>20101010106</br>
             <br>18435612612</br>
-			<div><img src="img/3.jpg"alt="selfie"width="100"height="100"></div>
+			<div><img src="3.jpg"alt="selfie"width="100"height="100"></div>
         </ul>
     </div>
 </div>
